RESOLVED FIXED 162703
Log console messages when the anchor download attribute is ignored
https://bugs.webkit.org/show_bug.cgi?id=162703
Summary Log console messages when the anchor download attribute is ignored
Chris Dumez
Reported 2016-09-28 15:32:05 PDT
Log console messages when the anchor download attribute is ignored so that the developer can better understand what's happening.
Attachments
Patch (4.57 KB, patch)
2016-09-28 15:36 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-09-28 15:36:45 PDT
Alex Christensen
Comment 2 2016-09-28 15:40:48 PDT
Good idea
WebKit Commit Bot
Comment 3 2016-09-28 16:53:26 PDT
Comment on attachment 290129 [details] Patch Clearing flags on attachment: 290129 Committed r206562: <http://trac.webkit.org/changeset/206562>
WebKit Commit Bot
Comment 4 2016-09-28 16:53:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.