Log console messages when the anchor download attribute is ignored https://bugs.webkit.org/show_bug.cgi?id=162703

Reviewed by Alex Christensen.

Log console messages when the anchor download attribute is ignored so
that the developer can better understand what's happening.

Source/WebCore:

No new tests, rebaselined existing tests.

* html/HTMLAnchorElement.cpp:
(WebCore::HTMLAnchorElement::handleClick):

LayoutTests:

* fast/dom/HTMLAnchorElement/anchor-download-synthetic-click-expected.txt:
* http/tests/security/anchor-download-block-crossorigin-expected.txt:


Canonical link: https://commits.webkit.org/180653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206562 268f45cc-cd09-0410-ab3c-d52691b4dbfc